# Gov_Press_Summary

./: .env  .gitignore  main.py  pyproject.toml  sqlite_DH_News.db
chroma_db_news_db/: chroma.sqlite3
tools/: ChromaDBHandler.py  ContentSummarizer.py  DocumentProcessor.py  JobSummarizer.py  NewsSummarizer.py  PostgresDatabase.py  SQLiteDatabase.py  _NewsSummarizer.py  webCrawler.py
