[project]
name = "gov-press-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.7.8",
    "dotenv>=0.9.9",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "psycopg2-binary>=2.9.11",
    "sentence-transformers>=5.2.0",
    "sqlmodel>=0.0.31",
]
